# Euler-Method

./: .gitignore  CMakeLists.txt  README.md  main file  main file.cpp  main.cpp  toz.txt
classes/Input/: Input.cpp  Input.h
include/: main.h
src/: main.cpp
